# inv_bevy

./: Cargo.toml  item.rs
examples/: main.rs
resources/: inv_player.ron  items.ron
src/: capacity.rs  inventory_builder.rs  item_map.rs  itemslot.rs  lib.rs  main.rs  plugin.rs
src/lib/: itemslot.rs  mod.rs
