[package]
name = "inv_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7" }
serde = { version = "1.0.138", features = ["derive"] }
ron = "0.7.1"

[[example]]
name = "main"
path = "examples/main.rs"